--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Tacos</h1>
 
+    <img src="../images/tacos.jpg">
+
+    <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
 </body>
 </html>
