Add description to tacos recipe

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -10,6 +10,14 @@
 
     <img src="../images/tacos.jpg">
 
+    <h2>Description</h2>
+
+    <p>These tacos are not only famous for their amazing taste but also for how
+        easy they are to prepare.</p>
+        <p>All you need is a slow cooker and in no time you will have savory tacos
+        to enjoy with your family.
+        </p>
+
     <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
 </body>
