Add ingredients to tacos

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -6,7 +6,7 @@
     <title>Tacos</title>
 </head>
 <body>
-    <h1>Tacos</h1>
+    <h1>Tacos al Pastor</h1>
 
     <img src="../images/tacos.jpg">
 
@@ -17,6 +17,25 @@
         <p>All you need is a slow cooker and in no time you will have savory tacos
         to enjoy with your family.
         </p>
+    
+        <h2>Ingredients</h2>
+
+        <ul>
+            <li>Pork shoulder (3 lb)</li>
+            <li>Pineapple (4 spears)</li>
+            <li>Guajillo chiles (6)</li>
+            <li>Chile de arbol (1)</li>
+            <li>Garlic (5 cloves)</li>
+            <li>White onion (1/4)</li>
+            <li>Whole black peppercorns (10)</li>
+            <li>Oregano (1 teaspoon)</li>
+            <li>Cumin (1/2 teaspoon)</li>
+            <li>Ground cloves(1/4 teaspoon)</li>
+            <li>Ground ginger (1/4 teaspoon)</li>
+            <li>Kosher salt (1 1/2 teaspoon)</li>
+            <li>Apple cider vinegar (1/4 cup)</li>
+            <li>Orange juice (1/4 cup)</li>
+        </ul>
 
     <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
