Add steps to prepare tacos

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -37,6 +37,18 @@
             <li>Orange juice (1/4 cup)</li>
         </ul>
 
+        <h2>Steps</h2>
+        <ol>
+            <li>Prepare the pork</li>
+            <li>Soften chiles</li>
+            <li>Make marinade</li>
+            <li>Marinate pork</li>
+            <li>Grill pork</li>
+            <li>Prepare toppings</li>
+            <li>Warm tortillas</li>
+            <li>Assemble tacos</li>
+        </ol>
+
     <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
 </body>
