--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -7,49 +7,42 @@
 </head>
 <body>
     <h1>Tacos al Pastor</h1>
-
-    <img src="../images/tacos.jpg">
+    <img src="../images/tacos.png" alt="Tacos al pastor served with cilantro and onion">>
 
     <h2>Description</h2>
-
-    <p>These tacos are not only famous for their amazing taste but also for how
-        easy they are to prepare.</p>
-        <p>All you need is a slow cooker and in no time you will have savory tacos
-        to enjoy with your family.
-        </p>
+    <p>These tacos are not only famous for their amazing taste but also for how easy they are to prepare.</p>
+    <p>All you need is a slow cooker and in no time you will have savory tacos to enjoy with your family.</p>
     
-        <h2>Ingredients</h2>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pork shoulder (3 lb)</li>
+        <li>Pineapple (4 spears)</li>
+        <li>Guajillo chiles (6)</li>
+        <li>Chile de arbol (1)</li>
+        <li>Garlic (5 cloves)</li>
+        <li>White onion (1/4)</li>
+        <li>Whole black peppercorns (10)</li>
+        <li>Oregano (1 teaspoon)</li>
+        <li>Cumin (1/2 teaspoon)</li>
+        <li>Ground cloves(1/4 teaspoon)</li>
+        <li>Ground ginger (1/4 teaspoon)</li>
+        <li>Kosher salt (1 1/2 teaspoon)</li>
+        <li>Apple cider vinegar (1/4 cup)</li>
+        <li>Orange juice (1/4 cup)</li>
+    </ul>
 
-        <ul>
-            <li>Pork shoulder (3 lb)</li>
-            <li>Pineapple (4 spears)</li>
-            <li>Guajillo chiles (6)</li>
-            <li>Chile de arbol (1)</li>
-            <li>Garlic (5 cloves)</li>
-            <li>White onion (1/4)</li>
-            <li>Whole black peppercorns (10)</li>
-            <li>Oregano (1 teaspoon)</li>
-            <li>Cumin (1/2 teaspoon)</li>
-            <li>Ground cloves(1/4 teaspoon)</li>
-            <li>Ground ginger (1/4 teaspoon)</li>
-            <li>Kosher salt (1 1/2 teaspoon)</li>
-            <li>Apple cider vinegar (1/4 cup)</li>
-            <li>Orange juice (1/4 cup)</li>
-        </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Prepare the pork</li>
+        <li>Soften chiles</li>
+        <li>Make marinade</li>
+        <li>Marinate pork</li>
+        <li>Grill pork</li>
+        <li>Prepare toppings</li>
+        <li>Warm tortillas</li>
+        <li>Assemble tacos</li>
+    </ol>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>Prepare the pork</li>
-            <li>Soften chiles</li>
-            <li>Make marinade</li>
-            <li>Marinate pork</li>
-            <li>Grill pork</li>
-            <li>Prepare toppings</li>
-            <li>Warm tortillas</li>
-            <li>Assemble tacos</li>
-        </ol>
-
-    <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
 </body>
 </html>
