Improve text content of tacos page
Add more descriptive content to ingredients and
preparation instructions

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -3,44 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tacos</title>
+    <title>Tacos al Pastor</title>
 </head>
 <body>
     <h1>Tacos al Pastor</h1>
     <img src="../images/tacos.png" alt="Tacos al pastor served with cilantro and onion">>
 
     <h2>Description</h2>
-    <p>These tacos are not only famous for their amazing taste but also for how easy they are to prepare.</p>
-    <p>All you need is a slow cooker and in no time you will have savory tacos to enjoy with your family.</p>
+    <p>Bold, smoky, sweet, and savory — Tacos al Pastor are a true Mexican street food classic. Inspired by Lebanese shawarma and adapted with traditional Mexican flavors, these tacos are made with marinated pork, grilled to perfection, and served with pineapple, onions, and cilantro.</p>
+    <p>While traditionally made on a vertical spit, this home-friendly version lets you recreate the magic using a slow cooker or grill. It's perfect for weekend gatherings, family dinners, or any time you crave a taste of Mexico.</p>
     
     <h2>Ingredients</h2>
     <ul>
-        <li>Pork shoulder (3 lb)</li>
-        <li>Pineapple (4 spears)</li>
-        <li>Guajillo chiles (6)</li>
-        <li>Chile de arbol (1)</li>
-        <li>Garlic (5 cloves)</li>
-        <li>White onion (1/4)</li>
-        <li>Whole black peppercorns (10)</li>
-        <li>Oregano (1 teaspoon)</li>
-        <li>Cumin (1/2 teaspoon)</li>
-        <li>Ground cloves(1/4 teaspoon)</li>
-        <li>Ground ginger (1/4 teaspoon)</li>
-        <li>Kosher salt (1 1/2 teaspoon)</li>
-        <li>Apple cider vinegar (1/4 cup)</li>
-        <li>Orange juice (1/4 cup)</li>
+        <li>3 lbs pork shoulder, sliced thin</li>
+        <li>4 pineapple spears (fresh or canned)</li>
+        <li>6 dried guajillo chiles, stemmed and seeded</li>
+        <li>1 dried chile de árbol (optional, for heat)</li>
+        <li>5 garlic cloves</li>
+        <li>1/4 white onion</li>
+        <li>10 whole black peppercorns</li>
+        <li>1 tsp dried oregano</li>
+        <li>1/2 tsp ground cumin</li>
+        <li>1/4 tsp ground cloves</li>
+        <li>1/4 tsp ground ginger</li>
+        <li>1 1/2 tsp kosher salt</li>
+        <li>1/4 cup apple cider vinegar</li>
+        <li>1/4 cup fresh orange juice</li>
+        <li>Corn tortillas (for serving)</li>
+        <li>Chopped white onion and fresh cilantro (for garnish)</li>
+        <li>Lime wedges (for serving)</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li>Prepare the pork</li>
-        <li>Soften chiles</li>
-        <li>Make marinade</li>
-        <li>Marinate pork</li>
-        <li>Grill pork</li>
-        <li>Prepare toppings</li>
-        <li>Warm tortillas</li>
-        <li>Assemble tacos</li>
+        <li><strong>Soften the chiles:</strong> Simmer guajillo and chile de árbol in water for 10 minutes, then drain.</li>
+        <li><strong>Make the marinade:</strong> Blend softened chiles with garlic, onion, spices, vinegar, orange juice, and a couple of pineapple chunks until smooth.</li>
+        <li><strong>Marinate the pork:</strong> Coat the sliced pork with the marinade, cover, and refrigerate for at least 4 hours (overnight preferred).</li>
+        <li><strong>Cook the pork:</strong> Grill or broil the marinated pork until caramelized and slightly charred. You can also slow-cook it on low for 6–8 hours, then sear for crisp edges.</li>
+        <li><strong>Grill the pineapple:</strong> Slice remaining pineapple spears and grill until lightly charred.</li>
+        <li><strong>Warm the tortillas:</strong> Heat corn tortillas on a hot skillet or grill until soft and slightly blistered.</li>
+        <li><strong>Assemble your tacos:</strong> Fill each tortilla with the cooked pork, grilled pineapple, chopped onion, and fresh cilantro. Squeeze with lime for extra brightness.</li>
+        <li><strong>Serve and enjoy:</strong> These tacos pair perfectly with a cold drink and good company!</li>
     </ol>
 
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
