Improve content of enchiladas page
Add content to ingredients and preparation steps

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -3,30 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enchiladas</title>
+    <title>Enchiladas de Guadalajara</title>
 </head>
 <body>
     <h1>Enchiladas de Guadalajara</h1>
 
-    <img src="../images/enchiladas.png">
+    <img src="../images/enchiladas.png" alt="Plate of enchiladas de Guadalajara topped with cheese and salsa">
 
     <h2>Description</h2>
 
-    <p>This recipe is simple to follow and will impress your family and friends.</p>
-        <p>In less than 1 hour you will be enjoying cheesy enchiladas.</p>
+    <p>Enchiladas de Guadalajara are a comforting, flavorful dish from the heart of Jalisco, known for their vibrant red salsa, tender shredded chicken, and rich toppings. These enchiladas bring the bold essence of traditional Mexican cooking into your kitchen with a recipe that is both simple and satisfying.</p>
+    <p>Perfect for family dinners or casual gatherings, these enchiladas are smothered in homemade red chile sauce, filled with juicy chicken, and topped with crumbled cheese, chopped onions, and a touch of crema. Ready in under an hour, this dish is sure to become a favorite!</p>
     
         <h2>Ingredients</h2>
 
         <ul>
-            <li>Chicken (3 lb)</li>
+            <li>3 lbs chicken (bone-in or boneless, for shredding)</li>
+            <li>12 corn tortillas</li>
+            <li>4 dried guajillo chiles, stemmed and seeded</li>
+            <li>2 garlic cloves</li>
+            <li>1/4 white onion</li>
+            <li>1 cup chicken broth</li>
+            <li>1/2 tsp ground cumin</li>
+            <li>1/2 tsp Mexican oregano</li>
+            <li>Salt to taste</li>
+            <li>Vegetable oil (for frying)</li>
+            <li>1/2 cup crumbled queso fresco or cotija cheese</li>
+            <li>1/4 cup chopped white onion (for garnish)</li>
+            <li>Mexican crema or sour cream (optional)</li>
+            <li>Sliced avocado or radishes (optional for serving)</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2>Preparation Steps</h2>
         <ol>
-            <li>Prepare the chicken</li>
+            <li><strong>Cook the chicken:</strong> Boil the chicken in salted water until fully cooked (about 30 minutes). Shred and set aside. Reserve the broth.</li>
+            <li><strong>Make the salsa:</strong> Simmer the guajillo chiles in hot water for 10 minutes. Blend with garlic, onion, cumin, oregano, salt, and about 1 cup of reserved broth until smooth.</li>
+            <li><strong>Fry the tortillas:</strong> Lightly fry each tortilla in oil for a few seconds per side until soft and pliable. Drain on paper towels.</li>
+            <li><strong>Dip and fill:</strong> Dip each tortilla into the warm chile sauce, fill with shredded chicken, and roll tightly.</li>
+            <li><strong>Plate and garnish:</strong> Arrange the enchiladas on a plate. Spoon extra salsa on top, then garnish with crumbled cheese, chopped onion, and a drizzle of crema.</li>
+            <li><strong>Serve warm:</strong> Optionally serve with avocado slices, radishes, or a side of beans and rice for a complete meal.</li>
         </ol>
 
-    <br></br>
     <a href="../index.html" target="_blank" rel="noopener noreferrer">Home</a>
 </body>
 </html>
