Improve text for chile relleno page
Add better descriptions of ingredients and steps

--- a/recipes/chile-relleno.html
+++ b/recipes/chile-relleno.html
@@ -3,27 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chile Relleno</title>
+    <title>Chile Relleno de Puebla</title>
 </head>
 <body>
     <h1>Chile Relleno de Puebla</h1>
 
-    <img src="../images/chile-relleno.png">
+    <img src="../images/chile-relleno.png" alt="Chile relleno stuffed with cheese and topped with tomato sauce">
 
     <h2>Description</h2>
 
-    <p>These chiles will quickly become you new favorite dish because of how delicious they are and how easy they are to make.</p>
-        <p>Savory, salty and spicy mixed into a single amazing dish.</p>
+    <p>Chile Relleno de Puebla is a beloved Mexican dish that combines smoky roasted poblano peppers with a rich, cheesy filling, all wrapped in a fluffy egg batter and lightly fried to golden perfection. It's comforting, satisfying, and surprisingly easy to prepare at home.</p>
+    <p>This dish brings together bold flavors — savory, slightly spicy, and wonderfully cheesy — all balanced by a simple tomato-based sauce that adds depth and brightness. Whether served as a main course or part of a festive meal, these stuffed peppers are a true crowd-pleaser.</p>
     
         <h2>Ingredients</h2>
 
         <ul>
-            <li>Chiles (3)</li>
+            <li>3 large poblano chiles</li>
+            <li>1 1/2 cups Oaxaca, Monterey Jack, or mozzarella cheese (shredded)</li>
+            <li>3 eggs, separated</li>
+            <li>1/4 cup all-purpose flour</li>
+            <li>Salt to taste</li>
+            <li>Vegetable oil (for frying)</li>
+            <li><strong>For the sauce:</strong></li>
+            <li>3 Roma tomatoes</li>
+            <li>1/4 white onion</li>
+            <li>1 garlic clove</li>
+            <li>1/2 cup chicken or vegetable broth</li>
+            <li>Salt and pepper to taste</li>
         </ul>
 
-        <h2>Steps</h2>
+        <h2>Preparation Steps</h2>
         <ol>
-            <li>Prepare the chiles</li>
+            <li><strong>Roast the chiles:</strong> Place poblano chiles over an open flame or under a broiler until the skin is blackened and blistered. Transfer to a covered bowl or sealed plastic bag to steam for 10 minutes, then peel off the skin. Carefully make a slit and remove seeds.</li>
+            <li><strong>Stuff the chiles:</strong> Fill each chile with shredded cheese, then gently close the opening with toothpicks if needed.</li>
+            <li><strong>Prepare the batter:</strong> Beat egg whites until stiff peaks form, then gently fold in the yolks and a pinch of salt. Lightly dust each stuffed chile with flour, then coat with the egg batter.</li>
+            <li><strong>Fry the chiles:</strong> Heat oil in a skillet over medium heat. Fry the battered chiles until golden brown on all sides. Drain on paper towels.</li>
+            <li><strong>Make the sauce:</strong> Blend tomatoes, onion, garlic, broth, salt, and pepper until smooth. Simmer in a saucepan for 10–15 minutes until slightly thickened.</li>
+            <li><strong>Serve:</strong> Pour warm tomato sauce over the chiles and serve immediately. Pair with rice or beans for a full meal.</li>
         </ol>
 
     <br></br>
